# test-commitizen

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish-package.yml  release-please.yml  tests.yml
src/test-commitizen/: scratch.py
