[project]
name = "fundus"
version = "1.0.0"
authors = [
    { name = "Max Dallabetta", email = "max.dallabetta@googlemail.com" },
]
description = "Test repo for commitizen using pre commit"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
]

[project.optional-dependencies]
dev = [
    "commitizen",
    "pre-commit"
]
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false
